[project]
name = "runelog"
dynamic = ["version"]

authors = [
    { name = "Alex González", email = "hello@alexgonzalezc.dev" },
]
description = "A simple, file-based Python library for tracking machine learning experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Streamlit",
]

dependencies = [
    "streamlit >= 1.20.0",
    "pandas >= 1.5.0",
    "scikit-learn >= 1.1.0",
    "joblib >= 1.5.1",
    "typer[all]",
    "rich >= 14.0.0",
    "PyYAML >= 6.0.2",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdownx-extensions"
]
test = [
    "pytest",
    "pytest-cov",
    "coverage"
]
format = [
    "black"
]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdownx-extensions",
    "pytest",
    "pytest-cov",
    "coverage",
    "black"
]

[project.scripts]
runelog = "runelog.cli:app"

[project.urls]
"Homepage" = "https://github.com/gonz4lex/runelog"
"Bug Tracker" = "https://github.com/gonz4lex/runelog/issues"

[tool.setuptools.dynamic]
version = { attr = "runelog.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/runelog/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "coverage",
  "black",
]

[tool.hatch.envs.default.scripts]
test = "pytest --cov=runelog --cov-report=term-missing --cov-report=xml"
format = "black src tests"